# melloCloud

./: Caddyfile  LICENSE  README.md  docker-compose.yml  makefile  melloCloud.code-workspace  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  setup.sh
.github/workflows/: deploy.yml  linting.yml
backend/: app.ts  biome.json  bun.lockb  bunfig.toml  dockerfile  example.env  jest.config.ts  knip.json  package-lock.json  package.json  pnpm-lock.yaml  prisma.config.ts  swagger.json  tsconfig.json
backend/.husky/: pre-commit
backend/docs/: SHARING.md
backend/drafts/: .eslintrc.json  .oxlintrc.json
backend/helpers/: avatar.ts
backend/middleware/: routes.middleware.ts
backend/prisma/: schema.prisma
backend/scripts/: generateSecrets.js
backend/services/: mailService.ts  userService.ts
backend/src/: app.ts  createHttpServer.ts  openapi.ts  server.bun.ts  server.node.ts
docs/: MIGRATION_ARGON2.md  MOBILE_APP.md  SECURITY.md  VIDEO_CALLS.md  YJS_MIGRATION.md
frontend/: .eslintrc.json  .gitignore  .old-eslintrc.json  .oxlintrc.json  .prettierrc  DESKTOP.md  analyse.html  biome.json  cypress.config.ts  dockerfile  eslint.config.js  index.html  jest-setup.ts  jest.config.ts  knip.json  package-lock.json  package.json  pnpm-lock.yaml  stylelint.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/.husky/: pre-commit
frontend/.storybook/: main.ts
frontend/cypress/: tsconfig.json
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: main.rs
(+506 files in other folders)
